# aiana

./: .gitignore  API_credentials.txt  Makefile  README.md  core.py  license.txt  pyproject.toml  raw-data-comparison-Widderstall-vs-ADS.py  requirements.txt  setup.py  sim-tools.py  widderstall-pv-yield-sim.py
agri_pv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aiana/: .gitignore  __init__.py  irradiance_aggregations.drawio  test.drawio
aiana/_tests_and_stuff/: Leo_test.py  Mohd_test.py  google_scholar_citation_report.py  loop_through_hours.py  notes.txt
aiana/anti_bug_testing/: run_all_at_once.py  tester_class.py  testing_of_apv_settings.py  testing_of_sim_and_view_settings.py
aiana/classes/: __init__.py  aiana_main.py  evaluator.py  oct_file_handler.py  plotter.py  simulator.py  weather_data.py  zAPV_Eval_mohd_only_reference.py
aiana/notizen/: doc_links.txt  tips.txt
aiana/resources/: locations.py
aiana/settings/: __init__.py  apv_system_settings.py  sim_settings.py  user_paths.py  view_settings.py
aiana/system_studies/: Typical_days_loop_S_incl_tables.py  cell_shadow_size_vs_z.py  example.py  minimal_example.py  study_apv_morschenich.py  study_subset_variation.py
aiana/utils/: RMSE_MBE.py  __init__.py  files_interface.py  plotting_utils.py  radiance_utils.py  study_utils.py
apv/: .01  Mohd_test.py  __init__.py  __main__.py  apv_main.py  br_wrapper copy 2.py  br_wrapper copy.py  br_wrapper.py  imports.txt  main.py  requirements.txt  settings.py
apv/Docs/: doc_links.txt
apv/_tests and stuff/: Leo_test.py  (+4 more)
first-tests/: read-weather-data.py
(+209 files in other folders)
