[tool.poetry]
name = "apv"
version = "0.5.0"
description = "coming soon"
authors = ["Leo.Raumann <leo.raumann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
pvlib = "^0.9.0"
numpy = "^1.22.2"
tqdm = "^4.63.0"
cdsapi = "^0.5.1"
urllib3 = "^1.26.8"
xarray = "^2022.3.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
joypy = "^0.2.6"
scipy = "^1.8.0"
bifacial_radiance = { git = "git@github.com:NREL/bifacial_radiance.git" }

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
